--- a/sass/layouts/_footer.scss
+++ b/sass/layouts/_footer.scss
@@ -1,24 +1,29 @@
 #main_footer {
-  text-align: center;
   display: flex;
   justify-content: space-between;
-  justify-self: flex-end;
-  align-items: center;
+  align-items: stretch;
   background-color: $prim-color;
   color: $secon-color;
-  min-height: 2.5rem;
+  min-height: 5.5%;
   padding-left: 1.5vh;
   padding-right: 1.5vh;
+  position: absolute;
+  box-sizing: border-box;
+  bottom: 0;
+  width: 100%;
   div {
     display: flex;
-    height: 100%;
+    justify-content: center;
+    align-items: center;
   }
 }
-.legals, .contact{
-  a{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.legals,
+.contact {
+  a {
     color: $secon-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
   }
 }
