--- a/sass/pages/_acceuil.scss
+++ b/sass/pages/_acceuil.scss
@@ -2,13 +2,6 @@
   display: none;
 }
 
-.menu {
-  a {
-    padding-top: 33%;
-    padding-bottom: 33%;
-  }
-}
-
 #soon {
   display: flex;
   justify-content: center;
